--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Compile and Run
         run: |
-          cd app
+          cd BST/c
           mkdir -p /temp
           g++ -std=c99 -o main.out main.c node.c tree.c
           ./main.out $amount > /temp/output-${{ github.run_id }}.txt
