--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Compile and Run
         run: |
           mkdir /temp
+          mkdir /datasets
+          cp datasets/* /datasets
           cd BST/c
           g++ -std=c99 -o main.out main.c node.c tree.c
           ./main.out $amount > /temp/output-${{ github.run_id }}.txt
