--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,24 +34,24 @@ jobs:
           name: output-${{ github.run_id }}-${{ matrix.amount }}
           path: /temp/output-${{ github.run_id }}-${{ matrix.version }}.txt
 
-  #summary:
-  #  needs: runner
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Checkout code
-  #      uses: actions/checkout@v2
-  #    - name: Download Output
-  #      uses: actions/download-artifact@v2
-  #      with:
-  #        name: output-${{ github.run_id }}
-  #        path: /temp
-  #    - name: Generate Summary
-  #      run: |
-  #        python summary.py /temp/output-${{ github.run_id }}.txt
-  #    - name: Commit and Push
-  #      run: |
-  #        git config --global user.name 'GitHub Actions'
-  #        git config --global user.email 'github-actions@github.com'
-  #        git add .
-  #        git commit -m "Add summary"
-  #        git push
+  summary:
+   needs: runner
+   runs-on: ubuntu-latest
+   steps:
+     - name: Checkout code
+       uses: actions/checkout@v2
+     - name: Download Output
+       uses: actions/download-artifact@v3
+       with:
+         path: /temp
+     - name: Generate Summary
+       run: |
+         ls /temp
+         cat *
+    #  - name: Commit and Push
+    #    run: |
+    #      git config --global user.name 'GitHub Actions'
+    #      git config --global user.email 'github-actions@github.com'
+    #      git add .
+    #      git commit -m "Add summary"
+    #      git push
