--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,8 @@ jobs:
    steps:
      - name: Checkout code
        uses: actions/checkout@v2
+     - name: Make temp folder
+       run: mkdir /temp
      - name: Download Output
        uses: actions/download-artifact@v3
        with:
