--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,7 @@ jobs:
       - name: Upload Output
         uses: actions/upload-artifact@v3
         with:
-          name: output-${{ github.run_id }}-${{ matrix.amount }}
-          path:  ${{ github.workspace }}/temp/output-${{ github.run_id }}-${{ matrix.version }}.txt
+          path:  ${{ github.workspace }}/temp
 
   summary:
    needs: runner
