--- a/.github/template/runner/action.yaml
+++ b/.github/template/runner/action.yaml
@@ -22,8 +22,8 @@ runs:
           cp datasets/* /datasets
           ls /datasets
           cd BST/${{ inputs.folder }}
-          ${{ input.build_command }}
-          ${{ input.run_command }} ${{ matrix.amount }} >  ${{ github.workspace }}/temp/output-${{ inputs.folder }}-${{ matrix.amount }}.txt
+          ${{ inputs.build_command }}
+          ${{ inputs.run_command }} ${{ matrix.amount }} >  ${{ github.workspace }}/temp/output-${{ inputs.folder }}-${{ matrix.amount }}.txt
     - name: Upload Output
       uses: actions/upload-artifact@v3
       with:
