--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
        with:
          path:  ${{ github.workspace }}/temp
      - name: Generate Summary
-       run: touch results.json
+       run: echo date > results.json
        working-directory: ${{ github.workspace }}
      - name: Add results.json
        run: |
