--- a/.github/template/runner/action.yaml
+++ b/.github/template/runner/action.yaml
@@ -24,9 +24,9 @@ runs:
           ls /datasets
           cd BST/${{ inputs.folder }}
           ${{ inputs.build_command }}
-          ${{ inputs.run_command }} ${{ matrix.amount }} >  ${{ github.workspace }}/temp/output-${{ inputs.folder }}-${{ matrix.amount }}--${{ matrix.attempt }}.txt
+          ${{ inputs.run_command }} ${{ matrix.amount }} >  temp/output-${{ inputs.folder }}-${{ matrix.amount }}--${{ matrix.attempt }}.txt
     - name: Upload Output
       uses: actions/upload-artifact@v3
       with:
         name: output-${{ inputs.folder }}-${{ matrix.amount }}.txt
-        path: ${{ github.workspace }}/temp/output-${{ inputs.folder }}-${{ matrix.amount }}--${{ matrix.attempt }}.txt
+        path: temp
