--- a/.github/template/runner/action.yaml
+++ b/.github/template/runner/action.yaml
@@ -21,12 +21,11 @@ runs:
           mkdir -p ${{ github.workspace }}/temp
           mkdir /datasets
           cp datasets/* /datasets
-          ls /datasets
           cd BST/${{ inputs.folder }}
           ${{ inputs.build_command }}
-          ${{ inputs.run_command }} ${{ matrix.amount }} >  temp/output-${{ inputs.folder }}-${{ matrix.amount }}-${{ matrix.attempt }}.txt
+          ${{ inputs.run_command }} ${{ matrix.amount }} >  ${{ github.workspace }}/temp/output-${{ inputs.folder }}-${{ matrix.amount }}-${{ matrix.attempt }}.txt
     - name: Upload Output
       uses: actions/upload-artifact@v3
       with:
         name: output-${{ inputs.folder }}-${{ matrix.amount }}.txt
-        path: temp
+        path: ${{ github.workspace }}/temp
