--- a/.github/template/runner/action.yaml
+++ b/.github/template/runner/action.yaml
@@ -23,7 +23,7 @@ runs:
           cp datasets/* /datasets
           cd BST/${{ inputs.folder }}
           ${{ inputs.build_command }}
-          ${{ inputs.run_command }} ${{ matrix.amount }} >  ${{ var.GITHUB_WORKSPACE }}/temp/output-${{ inputs.folder }}-${{ matrix.amount }}-${{ matrix.attempt }}.txt
+          ${{ inputs.run_command }} ${{ matrix.amount }} >  ${{ vars.GITHUB_WORKSPACE }}/temp/output-${{ inputs.folder }}-${{ matrix.amount }}-${{ matrix.attempt }}.txt
     - name: Upload Output
       uses: actions/upload-artifact@v3
       with:
