--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,13 +30,13 @@ jobs:
       - name: Download Output
         uses: actions/download-artifact@v3
         with:
-          path: ${{ github.workspace }}/temp
+          path: /res
       - name: Install dependencies
         run: |
           python -m pip install matplotlib
       - name: Generate Summary
         run: |
-          python pipeline_analysis.py
+          python pipeline_analysis.py /res/results
         working-directory: ${{ github.workspace }}
       - name: Add results.json
         run: |
