--- a/.github/template/runner/action.yaml
+++ b/.github/template/runner/action.yaml
@@ -15,7 +15,7 @@ runs:
   using: "composite"
   # Defining the action steps(Just one step to be simple)
   steps:
-    - name: Compile and Run
+    - name: Prepare
       shell: bash
       run: |
           mkdir /res
@@ -23,9 +23,16 @@ runs:
           cp datasets/* /datasets
           touch /res/output-${{ inputs.folder }}-${{ matrix.amount }}-${{ matrix.attempt }}.txt
           cd BST/${{ inputs.folder }}
-          ${{ inputs.build_command }}
-          ${{ inputs.run_command }} ${{ matrix.amount }} > /res/output-${{ inputs.folder }}-${{ matrix.amount }}-${{ matrix.attempt }}.txt
-          cat /res/output-${{ inputs.folder }}-${{ matrix.amount }}-${{ matrix.attempt }}.txt
+    - name: Build
+          shell: bash
+          run: |
+              ${{ inputs.build_command }}
+              ${{ inputs.run_command }} ${{ matrix.amount }} > /res/output-${{ inputs.folder }}-${{ matrix.amount }}-${{ matrix.attempt }}.txt
+              cat /res/output-${{ inputs.folder }}-${{ matrix.amount }}-${{ matrix.attempt }}.txt
+    - name: Run
+          shell: bash
+          run: |
+              ${{ inputs.run_command }} ${{ matrix.amount }} > /res/output-${{ inputs.folder }}-${{ matrix.amount }}-${{ matrix.attempt }}.txt
     - name: Upload Output
       uses: actions/upload-artifact@v3
       with:
