--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -239,7 +239,7 @@ jobs:
           run_command: go run *.go
 
   summary:
-    needs: [python3, c, cpp, cs, lua, rust]
+    needs: [python3, c, cpp, cs, lua, rust, golang]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
