--- a/.github/workflows/create_jobs.yaml
+++ b/.github/workflows/create_jobs.yaml
@@ -16,8 +16,8 @@ jobs:
       - name: Check for changes
         id: changes
         run: |
-          git add .github\workflows\main.yml
-          git add .github\workflows\test_lang.yml
+          git add .github/workflows/main.yml
+          git add .github/workflows/test_lang.yml
           git diff-index --quiet HEAD || echo "::set-output name=changed::true"
       - name: Commit and push changes
         run: |
